--- a/patterns/jolla-hw-adaptation-find5.yaml
+++ b/patterns/jolla-hw-adaptation-find5.yaml
@@ -9,6 +9,7 @@ Requires:
 - pattern:jolla-ui-configuration-find5
 
 - droid-hal-find5
+- droid-hal-fund5-detritus
 - droid-hal-find5-img-boot
 - droid-hal-find5-kernel-modules
 - droid-config-find5-sailfish
