[sensors] add package make sensors working after unlock
Change-Id: I809af1638a646d97dcac71b539c12ed51e48550a

--- a/patterns/jolla-hw-adaptation-find5.yaml
+++ b/patterns/jolla-hw-adaptation-find5.yaml
@@ -77,5 +77,9 @@ Requires:
 # For devices where test_gps eventually gets a fix:
 #- geoclue-provider-hybris-community
 
+# This is a temporary acceptable hack to have orientation sensors 
+ # See README for full description: https://github.com/mer-hybris/unblank-restart-sensors
+- unblank-restart-sensors
+
 Summary: Jolla HW Adaptation find5
 
