--- a/patterns/jolla-hw-adaptation-find5.yaml
+++ b/patterns/jolla-hw-adaptation-find5.yaml
@@ -81,5 +81,8 @@ Requires:
 # See README for full description: https://github.com/mer-hybris/unblank-restart-sensors
 - unblank-restart-sensors
 
+# for audio during calls
+- pulseaudio-modules-droid-glue
+
 Summary: Jolla HW Adaptation find5
 
