[gps] geoclue-provider-hybris is available to build against
Change-Id: Id1027bbfc31d12aa8b270e845f28fd848d2ffb7e

--- a/patterns/jolla-hw-adaptation-find5.yaml
+++ b/patterns/jolla-hw-adaptation-find5.yaml
@@ -75,7 +75,7 @@ Requires:
 - telepathy-ring
 
 # For devices where test_gps eventually gets a fix:
-- geoclue-provider-hybris-community
+- geoclue-provider-hybris
 
 # This is a temporary acceptable hack to have orientation sensors 
 # See README for full description: https://github.com/mer-hybris/unblank-restart-sensors
