[pattern] add Troch for Evens-View
Change-Id: I17741583b0fb06de853c2ea47f7082d2f4ab50b5

--- a/patterns/jolla-hw-adaptation-find5.yaml
+++ b/patterns/jolla-hw-adaptation-find5.yaml
@@ -83,5 +83,8 @@ Requires:
 # for audio during calls
 - pulseaudio-modules-droid-glue
 
+# For Torch in Events View
+- jolla-settings-system-flashlight
+
 Summary: Jolla HW Adaptation find5
 
