[pattern] add offline location
Change-Id: Icec9d0f0dadd21728038af4ef2ba9f37d8ae3953

--- a/patterns/jolla-hw-adaptation-find5.yaml
+++ b/patterns/jolla-hw-adaptation-find5.yaml
@@ -76,6 +76,9 @@ Requires:
 # For devices where test_gps eventually gets a fix:
 - geoclue-provider-hybris
 
+# For offline location provider
+- geoclue-provider-mlsdb
+
 # This is a temporary acceptable hack to have orientation sensors 
 # See README for full description: https://github.com/mer-hybris/unblank-restart-sensors
 - unblank-restart-sensors
