[pattern] fix typo
Change-Id: I685c9fc239e8bdae557e94c55368c0fe4481d558

--- a/patterns/jolla-ui-configuration-find5.yaml
+++ b/patterns/jolla-ui-configuration-find5.yaml
@@ -9,7 +9,7 @@ Requires:
 
 # Introduced starting Sailfish OS 2.0.4.x:
 # 3rd party accounts like Twitter, VK, cloud services, etc
-+- jolla-settings-accounts-extensions-3rd-party-all
+- jolla-settings-accounts-extensions-3rd-party-all
 
 Summary: Jolla UI Configuration find5
 
