[OTA] add files and configs for over the air updates
Change-Id: I3056c5587a2a94214f6c5a312a8b3e062687ed30

--- a/patterns/jolla-hw-adaptation-find5.yaml
+++ b/patterns/jolla-hw-adaptation-find5.yaml
@@ -12,6 +12,7 @@ Requires:
 - droid-hal-find5-detritus
 - droid-hal-find5-img-boot
 - droid-hal-find5-kernel-modules
+- droid-config-find5-flashing
 - droid-config-find5-sailfish
 - droid-config-find5-pulseaudio-settings
 - droid-config-find5-policy-settings
